Updated LegacyModel to latest Eminem mediable trait; fixed title-btn styling on Safari

--- a/src/assets/less/admin.less
+++ b/src/assets/less/admin.less
@@ -601,10 +601,11 @@ input+.iris-picker{
 */
 
 .title-btn {
-    top: 3px;
+    top: 6px;
     height: 32px;
     width: 32px;
     overflow: hidden;
+    vertical-align: top;
     border: 2px solid #bbb;
     -webkit-border-radius: 20px;
     border-radius: 20px;
